--- a/.github/workflows/pr_tests.yml
+++ b/.github/workflows/pr_tests.yml
@@ -1,4 +1,4 @@
-name: Run Prettier Check
+name: PR Checks
 
 on:
   pull_request:
@@ -7,6 +7,7 @@ on:
 
 jobs:
   run:
+    name: Prettier lint
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
