--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@
 # https://app.supabase.com/project/_/settings/api
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+# Update this with your OMDB API key
+# https://www.omdbapi.com/apikey.aspx
+NEXT_OMDB_API_KEY=
