--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
     "build": "next build",
     "start": "next start",
     "lint": "prettier --check .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "lint-staged": {
     "*.{ts,tsx,js,css,md}": "prettier --write --ignore-unknown"
+  },
+  "resolutions": {
+    "string-width": "4.2.3",
+    "wrap-ansi": "7.0.0"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -27,14 +33,15 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "dotenv": "^16.4.5",
     "encoding": "^0.1.13",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
-    "lint-staged": "15.2.2",
+    "lint-staged": "^15.2.2",
+    "next-test-api-route-handler": "^4.0.7",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2"
   }
