Add OMDB API test

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
