--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "prepare": "husky install",
-    "lint": "prettier --check ."
+    "lint": "prettier --check .",
+    "prepare": "husky",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "lint-staged": {
-    "**/*.{ts,tsx}": "prettier --write --ignore-unknown"
+    "*.{ts,tsx,js,css,md}": "prettier --write --ignore-unknown"
+  },
+  "resolutions": {
+    "string-width": "4.2.3",
+    "wrap-ansi": "7.0.0"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -27,12 +33,17 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "dotenv": "^16.4.5",
     "encoding": "^0.1.13",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5"
+    "next-test-api-route-handler": "^4.0.7",
+    "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2"
   }
 }
