Add draggable elements for kanban board

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "wrap-ansi": "7.0.0"
   },
   "dependencies": {
+    "@atlaskit/pragmatic-drag-and-drop": "^1.1.9",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.16",
