--- a/.github/workflows/pr_tests.yml
+++ b/.github/workflows/pr_tests.yml
@@ -4,6 +4,12 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - frontend/**
+
+defaults:
+  run:
+    working-directory: frontend
 
 jobs:
   prettier:
