Add supabase functions deploy from main

--- a/.github/workflows/pr_frontend_tests.yml
+++ b/.github/workflows/pr_frontend_tests.yml
@@ -1,4 +1,4 @@
-name: PR Checks
+name: PR Frontend Checks
 
 on:
   pull_request:
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - frontend/**
+  workflow_dispatch:
 
 defaults:
   run:
