--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
     "serve": "supabase functions serve",
     "db:start": "supabase start",
     "db:status": "supabase status",
-    "db:stop": "supabase stop"
+    "db:stop": "supabase stop",
+    "db:reset": "supabase db reset"
   },
   "devDependencies": {
     "supabase": "^1.167.4"
