--- a/.github/workflows/deploy_backend_supabase.yml
+++ b/.github/workflows/deploy_backend_supabase.yml
@@ -19,5 +19,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: supabase/setup-cli@v1
         with:
-          version: latest
+          version: 1.167.4
       - run: supabase functions deploy --project-ref $PROJECT_ID
