Fix function test

--- a/.github/workflows/deploy_backend_supabase.yml
+++ b/.github/workflows/deploy_backend_supabase.yml
@@ -9,6 +9,10 @@ on:
       - backend/**
   workflow_dispatch:
 
+defaults:
+  run:
+    working-directory: ./backend
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
