--- a/.github/workflows/pr_backend_tests.yml
+++ b/.github/workflows/pr_backend_tests.yml
@@ -36,7 +36,9 @@ jobs:
       - uses: supabase/setup-cli@v1
         with:
           version: 1.167.4
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: 1.43.6
       - run: supabase start
       - run: supabase db reset
-      # - run: supabase functions serve
       - run: deno test --allow-all deno-test.ts --env-file .env.local
