--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
     "db:start": "supabase start",
     "db:status": "supabase status",
     "db:stop": "supabase stop",
-    "db:reset": "supabase db reset"
+    "db:reset": "supabase db reset",
+    "db:migrate": "supabase db diff --use-migra -f output"
   },
   "devDependencies": {
     "supabase": "^1.167.4"
