feat: Setup Supabase Functions (#40)

--- a/.github/workflows/pr_frontend_tests.yml
+++ b/.github/workflows/pr_frontend_tests.yml
@@ -1,9 +1,16 @@
-name: PR Checks
+name: PR Frontend Checks
 
 on:
   pull_request:
     branches:
       - main
+    paths:
+      - frontend/**
+  workflow_dispatch:
+
+defaults:
+  run:
+    working-directory: ./frontend
 
 jobs:
   prettier:
@@ -16,10 +23,11 @@ jobs:
         with:
           node-version: 20
           cache: yarn
-      - name: install dependencies
-        run: yarn install --frozen-lockfile
-      - name: Prettier lint
-        run: yarn lint
+          cache-dependency-path: frontend/yarn.lock
+      - name: prettier lint
+        run: |
+          yarn install --frozen-lockfile
+          yarn lint
   jest:
     name: Jest Test
     runs-on: ubuntu-22.04
@@ -32,7 +40,8 @@ jobs:
         with:
           node-version: 20
           cache: yarn
-      - name: install dependencies
-        run: yarn install --frozen-lockfile
+          cache-dependency-path: frontend/yarn.lock
       - name: unit test
-        run: yarn test
+        run: |
+          yarn install --frozen-lockfile
+          yarn test
