feat: Add watchlist API function (#42)

--- a/.github/workflows/pr_backend_tests.yml
+++ b/.github/workflows/pr_backend_tests.yml
@@ -22,9 +22,19 @@ jobs:
         with:
           version: 1.167.4
       - run: supabase start
-      - name: Verify generated types are checked in
+      - name: Verify generated types are checked in (Frontend)
         env:
           TYPES_PATH: ../frontend/utils/supabase/types.gen.ts
+        run: |
+          supabase gen types typescript --local > $TYPES_PATH
+          if ! git diff --ignore-space-at-eol --exit-code --quiet $TYPES_PATH; then
+            echo "Detected uncommitted changes after build. Run genTypes.sh and commit the result. See status below:"
+            git diff
+            exit 1
+          fi
+      - name: Verify generated types are checked in (Backend)
+        env:
+          TYPES_PATH: ./supabase/functions/_shared/types.gen.ts
         run: |
           supabase gen types typescript --local > $TYPES_PATH
           if ! git diff --ignore-space-at-eol --exit-code --quiet $TYPES_PATH; then
