--- a/.github/workflows/pr_frontend_tests.yml
+++ b/.github/workflows/pr_frontend_tests.yml
@@ -42,4 +42,4 @@ jobs:
       - name: unit test
         run: |
           yarn install --frozen-lockfile
-          yarn test
+          yarn test --passWithNoTests
