--- a/.github/workflows/pr_backend_tests.yml
+++ b/.github/workflows/pr_backend_tests.yml
@@ -45,10 +45,6 @@ jobs:
   test-migrations-functions:
     name: Supabase Migrations and Functions Tests
     runs-on: ubuntu-latest
-    env:
-      SUPABASE_URL: http://localhost:54321
-      SUPABASE_ANON_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZS1kZW1vIiwicm9sZSI6ImFub24iLCJleHAiOjE5ODM4MTI5OTZ9.CRXP1A7WOeoJeXxjNni43kdQwgnWNReilDMblYTn_I0
-      OMDB_API_KEY: ${{ secrets.NEXT_OMDB_API_KEY }}
     steps:
       - uses: actions/checkout@v3
       - uses: supabase/setup-cli@v1
@@ -57,6 +53,7 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: 1.43.6
+      - run: echo "OMDB_API_KEY=${{ secrets.NEXT_OMDB_API_KEY }}" > .env
       - run: supabase start
       - run: supabase db reset
       - run: supabase serve &
