--- a/.github/workflows/pr_backend_tests.yml
+++ b/.github/workflows/pr_backend_tests.yml
@@ -53,7 +53,7 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: 1.43.6
-      - run: echo "OMDB_API_KEY=${{ secrets.NEXT_OMDB_API_KEY }}" > .env
+      - run: echo "OMDB_API_KEY=${{ secrets.NEXT_OMDB_API_KEY }}" > .env.local
       - run: supabase start
       - run: supabase db reset
       - run: supabase serve &
