Run tests without serving

--- a/.github/workflows/pr_backend_tests.yml
+++ b/.github/workflows/pr_backend_tests.yml
@@ -56,5 +56,4 @@ jobs:
       - run: echo "OMDB_API_KEY=${{ secrets.NEXT_OMDB_API_KEY }}" > .env.local
       - run: supabase start
       - run: supabase db reset
-      - run: supabase functions serve --env-file=.env.local &
-      - run: deno test --allow-all ./supabase/functions/tests/
+      - run: deno test --allow-all ./supabase/functions/tests/ --env=.env.local
