feat: Integrate watchlist API and update UI (#46)

--- a/.github/workflows/pr_frontend_tests.yml
+++ b/.github/workflows/pr_frontend_tests.yml
@@ -31,8 +31,6 @@ jobs:
   jest:
     name: Jest Test
     runs-on: ubuntu-22.04
-    env:
-      NEXT_OMDB_API_KEY: ${{ secrets.NEXT_OMDB_API_KEY }}
     steps:
       - uses: actions/checkout@v3
       - name: Set Node.js 20
@@ -44,4 +42,4 @@ jobs:
       - name: unit test
         run: |
           yarn install --frozen-lockfile
-          yarn test
+          yarn test --passWithNoTests
