--- a/.github/workflows/pr_frontend_tests.yml
+++ b/.github/workflows/pr_frontend_tests.yml
@@ -3,7 +3,8 @@ name: PR Frontend Checks
 on:
   pull_request:
     branches:
-      - main
+      - staging
+      - prod
     paths:
       - frontend/**
   workflow_dispatch:
@@ -17,7 +18,7 @@ jobs:
     name: Prettier Lint
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set Node.js 20
         uses: actions/setup-node@v3
         with:
@@ -32,7 +33,7 @@ jobs:
     name: Jest Test
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set Node.js 20
         uses: actions/setup-node@v3
         with:
