--- a/.github/workflows/manual_push_to_prod.yml
+++ b/.github/workflows/manual_push_to_prod.yml
@@ -11,7 +11,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ secrets.OMNIFLIX_BOT_APPID }}
+          private-key: ${{ secrets.OMNIFLIX_BOT_SECRET }}
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ steps.app-token.outputs.token }}
+      - name: Setup Bot Account
+        run: |
+          git config user.name Omniflix Bot
+          git config user.email github-actions@github.com
       - name: Deploy to Production
         run: |
           git checkout preprod
