Update workflows to use tag based release

--- a/.github/workflows/pr_frontend_tests.yml
+++ b/.github/workflows/pr_frontend_tests.yml
@@ -2,9 +2,7 @@ name: PR Frontend Checks
 
 on:
   pull_request:
-    branches:
-      - staging
-      - prod
+    branches: ["dev", "master"]
     paths:
       - frontend/**
   workflow_dispatch:
