--- a/.github/workflows/deploy_backend_supabase.yml
+++ b/.github/workflows/deploy_backend_supabase.yml
@@ -2,11 +2,8 @@ name: Deploy Supabase Functions
 
 on:
   push:
-    branches:
-      - staging
-      - prod
-    paths:
-      - backend/**
+    branches: ["dev"]
+    tags: ["*"]
   workflow_dispatch:
 
 defaults:
@@ -20,12 +17,12 @@ jobs:
     steps:
       - name: Set environment for branch
         run: |
-          if [[ $GITHUB_REF_NAME == 'prod' ]]; then
-              echo "SUPABASE_ACCESS_TOKEN=${{ secrets.SUPABASE_ACCESS_TOKEN }}" >> "$GITHUB_ENV"
-              echo "PROJECT_ID=${{ secrets.SUPABASE_PROJECT_ID }}" >> "$GITHUB_ENV"
-          else
+          if [[ $GITHUB_REF_NAME == 'dev' ]]; then
               echo "SUPABASE_ACCESS_TOKEN=${{ secrets.SUPABASE_STAGING_ACCESS_TOKEN }}" >> "$GITHUB_ENV"
               echo "PROJECT_ID=${{ secrets.SUPABASE_STAGING_PROJECT_ID }}" >> "$GITHUB_ENV"
+          else
+              echo "SUPABASE_ACCESS_TOKEN=${{ secrets.SUPABASE_ACCESS_TOKEN }}" >> "$GITHUB_ENV"
+              echo "PROJECT_ID=${{ secrets.SUPABASE_PROJECT_ID }}" >> "$GITHUB_ENV"
           fi
       - uses: actions/checkout@v4
       - uses: supabase/setup-cli@v1
@@ -38,14 +35,14 @@ jobs:
     steps:
       - name: Set environment for branch
         run: |
-          if [[ $GITHUB_REF_NAME == 'prod' ]]; then
-              echo "SUPABASE_ACCESS_TOKEN=${{ secrets.SUPABASE_ACCESS_TOKEN }}" >> "$GITHUB_ENV"
-              echo "PROJECT_ID=${{ secrets.SUPABASE_PROJECT_ID }}" >> "$GITHUB_ENV"
-              echo "SUPABASE_DB_PASSWORD=${{ secrets.SUPABASE_DB_PASSWORD }}" >> "$GITHUB_ENV"
-          else
+          if [[ $GITHUB_REF_NAME == 'dev' ]]; then
               echo "SUPABASE_ACCESS_TOKEN=${{ secrets.SUPABASE_STAGING_ACCESS_TOKEN }}" >> "$GITHUB_ENV"
               echo "PROJECT_ID=${{ secrets.SUPABASE_STAGING_PROJECT_ID }}" >> "$GITHUB_ENV"
               echo "SUPABASE_DB_PASSWORD=${{ secrets.SUPABASE_STAGING_DB_PASSWORD }}" >> "$GITHUB_ENV"
+          else
+              echo "SUPABASE_ACCESS_TOKEN=${{ secrets.SUPABASE_ACCESS_TOKEN }}" >> "$GITHUB_ENV"
+              echo "PROJECT_ID=${{ secrets.SUPABASE_PROJECT_ID }}" >> "$GITHUB_ENV"
+              echo "SUPABASE_DB_PASSWORD=${{ secrets.SUPABASE_DB_PASSWORD }}" >> "$GITHUB_ENV"
           fi
       - uses: actions/checkout@v4
       - uses: supabase/setup-cli@v1
@@ -54,5 +51,5 @@ jobs:
       - run: supabase link --project-ref $PROJECT_ID
       - run: supabase db push
       # Only reset staging database
-      - if: ${{ github.ref_name == 'staging' }}
+      - if: ${{ github.ref_name == 'dev' }}
         run: supabase db reset
