--- a/.github/workflows/pr_backend_tests.yml
+++ b/.github/workflows/pr_backend_tests.yml
@@ -2,9 +2,7 @@ name: PR Backend Checks
 
 on:
   pull_request:
-    branches:
-      - staging
-      - prod
+    branches: ["dev", "master"]
     paths:
       - backend/**
   workflow_dispatch:
@@ -54,7 +52,7 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: 1.43.6
-      - run: echo "OMDB_API_KEY=${{ secrets.NEXT_OMDB_API_KEY }}" > .env.local
+      - run: echo "OMDB_API_KEY=${{ secrets.OMDB_API_KEY }}" > .env.local
       - run: supabase start
       - run: supabase functions serve --env-file=.env.local &
       - run: deno test --allow-all ./supabase/functions/tests/
