--- a/.github/workflows/pr_backend_tests.yml
+++ b/.github/workflows/pr_backend_tests.yml
@@ -2,7 +2,7 @@ name: PR Backend Checks
 
 on:
   pull_request:
-    branches: ["dev", "master"]
+    branches: ["dev", "main"]
     paths:
       - backend/**
   workflow_dispatch:
