--- a/.github/workflows/pr_frontend_tests.yml
+++ b/.github/workflows/pr_frontend_tests.yml
@@ -2,7 +2,7 @@ name: PR Frontend Checks
 
 on:
   pull_request:
-    branches: ["dev", "master"]
+    branches: ["dev", "main"]
     paths:
       - frontend/**
   workflow_dispatch:
