--- a/.github/workflows/sync_staging_to_preprod.yml
+++ b/.github/workflows/sync_staging_to_preprod.yml
@@ -1,4 +1,4 @@
-name: Sync Dev to Master
+name: Sync Dev to main
 
 on:
   push:
@@ -26,7 +26,7 @@ jobs:
         run: |
           git config user.name Omniflix Bot
           git config user.email github-actions@github.com
-      - name: Sync Dev to Master
+      - name: Sync Dev to main
         run: |
           git checkout dev
           git fetch origin
