--- a/.github/workflows/deploy_backend_supabase.yml
+++ b/.github/workflows/deploy_backend_supabase.yml
@@ -18,11 +18,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set environment for branch
         run: |
+          echo "SUPABASE_ACCESS_TOKEN=${{ secrets.SUPABASE_ACCESS_TOKEN }}" >> "$GITHUB_ENV"
           if [[ $GITHUB_REF_NAME == 'dev' ]]; then
-              echo "SUPABASE_ACCESS_TOKEN=${{ secrets.SUPABASE_STAGING_ACCESS_TOKEN }}" >> "$GITHUB_ENV"
               echo "PROJECT_ID=${{ secrets.SUPABASE_STAGING_PROJECT_ID }}" >> "$GITHUB_ENV"
           else
-              echo "SUPABASE_ACCESS_TOKEN=${{ secrets.SUPABASE_ACCESS_TOKEN }}" >> "$GITHUB_ENV"
               echo "PROJECT_ID=${{ secrets.SUPABASE_PROJECT_ID }}" >> "$GITHUB_ENV"
           fi
       - uses: supabase/setup-cli@v1
@@ -36,12 +35,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set environment for branch
         run: |
+          echo "SUPABASE_ACCESS_TOKEN=${{ secrets.SUPABASE_ACCESS_TOKEN }}" >> "$GITHUB_ENV"
           if [[ $GITHUB_REF_NAME == 'dev' ]]; then
-              echo "SUPABASE_ACCESS_TOKEN=${{ secrets.SUPABASE_STAGING_ACCESS_TOKEN }}" >> "$GITHUB_ENV"
               echo "PROJECT_ID=${{ secrets.SUPABASE_STAGING_PROJECT_ID }}" >> "$GITHUB_ENV"
               echo "SUPABASE_DB_PASSWORD=${{ secrets.SUPABASE_STAGING_DB_PASSWORD }}" >> "$GITHUB_ENV"
           else
-              echo "SUPABASE_ACCESS_TOKEN=${{ secrets.SUPABASE_ACCESS_TOKEN }}" >> "$GITHUB_ENV"
               echo "PROJECT_ID=${{ secrets.SUPABASE_PROJECT_ID }}" >> "$GITHUB_ENV"
               echo "SUPABASE_DB_PASSWORD=${{ secrets.SUPABASE_DB_PASSWORD }}" >> "$GITHUB_ENV"
           fi
@@ -52,4 +50,4 @@ jobs:
       - run: supabase db push
       # Only reset staging database
       - if: ${{ github.ref_name == 'dev' }}
-        run: supabase db reset
+        run: supabase db reset --linked
