Add yes context to db reset command

--- a/.github/workflows/deploy_backend_supabase.yml
+++ b/.github/workflows/deploy_backend_supabase.yml
@@ -50,4 +50,4 @@ jobs:
       - run: supabase db push
       # Only reset staging database
       - if: ${{ github.ref_name == 'dev' }}
-        run: supabase db reset --linked
+        run: supabase db reset --linked <<< 'y'
