--- a/.github/workflows/prod_release_frontend.yml
+++ b/.github/workflows/prod_release_frontend.yml
@@ -10,6 +10,7 @@ permissions:
 jobs:
   deploy-frontend:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     env:
       VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
       VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
