--- a/.github/workflows/prod_release_frontend.yml
+++ b/.github/workflows/prod_release_frontend.yml
@@ -9,6 +9,7 @@ permissions:
 
 jobs:
   deploy-frontend:
+    name: Deploy Frontend to Vercel Production
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     env:
