--- a/backend/supabase/config.toml
+++ b/backend/supabase/config.toml
@@ -151,7 +151,7 @@ url = ""
 skip_nonce_check = false
 
 [analytics]
-enabled = true
+enabled = false
 port = 54327
 vector_port = 54328
 # Configure one of the supported backends: `postgres`, `bigquery`.
