--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,7 @@
 # Update this with your OMDB API key
 # https://www.omdbapi.com/apikey.aspx
 OMDB_API_KEY=
+
+# Update this with your TMDB API key
+# https://developer.themoviedb.org/docs/getting-started
+TMDB_API_KEY=
