--- a/.github/workflows/recommendation_staging.yml
+++ b/.github/workflows/recommendation_staging.yml
@@ -28,7 +28,7 @@ jobs:
 
             # Pull from git repo
             git checkout dev || true # Force return true so exit code is not 1
-            git pull
+            git pull https://jloh02:${{ secrets.CICD_PAT }}@github.com/jloh02/omniflix.git
 
             # Clear space
             docker system prune -f
