Add books table and functions

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,7 @@ OMDB_API_KEY=
 # Update this with your TMDB API key
 # https://developer.themoviedb.org/docs/getting-started
 TMDB_API_KEY=
+
+# Update this with your Google API key
+# https://developers.google.com/books/docs/v1/getting_started
+GOOGLE_API_KEY=
